Locales + Compatibility + Thumbnail

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -1,64 +1,88 @@
 [mod-setting-name]
 
 # Vanilla Armour's
-modular-armor-grid-size-h=Modular Armour height
-modular-armor-grid-size-w=Modular Armour width
-power-armor-grid-size-h=Power Armour MK1 height
-power-armor-grid-size-w=Power Armour MK1 width
-power-armor-mk2-grid-size-h=Power Armour MK2 height
-power-armor-mk2-grid-size-w=Power Armour MK2 width
+modular-armor-grid-size-h=Modular Armour Height
+modular-armor-grid-size-w=Modular Armour Width
+
+power-armor-grid-size-h=Power Armour MK1 Height
+power-armor-grid-size-w=Power Armour MK1 Width
+
+power-armor-mk2-grid-size-h=Power Armour MK2 Height
+power-armor-mk2-grid-size-w=Power Armour MK2 Width
 
 # Bob's Armour's
-bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 height
-bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 width
-bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 height
-bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 width
-bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 height
-bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 width
+bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height
+bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width
+
+bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 Height
+bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width
+
+bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height
+bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width
 
 # Power Armour mk3
-pamk3-pmak3-grid-size-h="Mk3's" Power Armour MK3 height
-pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 width
-pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 height
-pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 width
+pamk3-pmak3-grid-size-h="Mk3's" Power Armour MK3 Height
+pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 Width
+
+pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 Height
+pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 Width
 
 # Krastorio 2
-mk3-armor-grid-size-h="K2's" Power Armour MK3 height
-mk3-armor-grid-size-w="K2's" Power Armour MK3 width 
-mk4-armor-grid-size-h="K2's" Power Armour MK4 height
-mk4-armor-grid-size-w="K2's" Power Armour MK4 width
+mk3-armor-grid-size-h="K2's" Power Armour MK3 Height
+mk3-armor-grid-size-w="K2's" Power Armour MK3 Width
+
+mk4-armor-grid-size-h="K2's" Power Armour MK4 Height
+mk4-armor-grid-size-w="K2's" Power Armour MK4 Width
 
 # Space Exploration
-se-thruster-suit-grid-size-h="SE's" Space Suit 1 height
-se-thruster-suit-grid-size-w="SE's" Space Suit 1 width
-se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 height
-se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 width
-se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 height
-se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
-se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
-se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
+se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height
+se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width
+
+se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 Height
+se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width
+
+se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height
+se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width
+
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width
 
 # Power And Armour
+pa-mk3-grid-size-h="P&A's" Power Armours Mk3 Height
+pa-mk3-grid-size-w="P&A's" Power Armours Mk3 Width
+
+pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height
+pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width
 
 # Factorio Extended Equipment
+extended-armour-mk1-grid-size-h="FE's" Power Armour MK3 Height
+extended-armour-mk1-grid-size-w="FE's" Power Armour MK3 Width
+
+extended-armour-mk2-grid-size-h="FE's" Power Armour MK3 Height
+extended-armour-mk2-grid-size-w="FE's" Power Armour MK3 Width
+
+extended-armour-mk3-grid-size-h="FE's" Power Armour MK3 Height
+extended-armour-mk3-grid-size-w="FE's" Power Armour MK3 Width
 
 # Rampant Arsenal
-power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 height
-power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 width
+power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 Height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 Width
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 height
-mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 width
-mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 height
-mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 width
-mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 height
-mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 width
+custom-power-armor-mk3-grid-size-h="Custom's" Power Armour MK3 Height
+custom-power-armor-mk3-grid-size-w="Custom's" Power Armour MK3 Width
+
+custom-power-armor-mk4-grid-size-h="Custom's" Power Armour MK4 Height
+custom-power-armor-mk4-grid-size-w="Custom's" Power Armour MK4 Width
+
+custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height
+custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width
 
 [mod-setting-description]
 
-# explaining the (Base & Mod Defaults) 
-# Mod Defaults is waht my mod set the sizes to.
-# Base Defaults is waht the game has set the size to be or the mod u installled before i did my changes. So please keep it that way.
+# Explaining the (Base & Mod Defaults): 
+# Mod Defaults is what my mod set the sizes to.
+# Base Defaults is what the game/mod u installed before i did my changes has set the size to.
 # Also to keep the translation clean keep the Hight first and Witdh under
 
 # Vanilla Armour's
@@ -109,8 +133,21 @@ se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:400\nBase 
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:400\nBase Default:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power And Armour
+pa-mk3-grid-size-h="P&A's" Power Armours Mk3 Height\nMin:0\nMax:40\nBase Default:20\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pa-mk3-grid-size-w="P&A's" Power Armours Mk3 Width\nMin:0\nMax:40\nBase Default:20\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height\nMin:0\nMax:50\nBase Default:24\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width\nMin:0\nMax:50\nBase Default:24\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Factorio Extended Equipment
+extended-armour-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armour-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+extended-armour-mk2-grid-size-h="FE's" Power Armour MK2 Height\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armour-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+extended-armour-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armour-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
