--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -3,56 +3,80 @@
 # Vanilla Armour's
 modular-armor-grid-size-h=Modulær Rustning Høyde
 modular-armor-grid-size-w=Modulær Rustning Bredde
+
 power-armor-grid-size-h=Elektrisk Rustning Høyde
 power-armor-grid-size-w=Elektrisk Rustning Bredde
+
 power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Høyde
 power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Bredde
 
 # Bob's Armour's
 bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Høyde
 bob-power-armor-mk3-grid-size-w="Bob's" Elektrisk Rustning MK3 Bredde
+
 bob-power-armor-mk4-grid-size-h="Bob's" Elektrisk Rustning MK4 Høyde
 bob-power-armor-mk4-grid-size-w="Bob's" Elektrisk Rustning MK4 Bredde
+
 bob-power-armor-mk5-grid-size-h="Bob's" Elektrisk Rustning MK5 Høyde
 bob-power-armor-mk5-grid-size-w="Bob's" Elektrisk Rustning MK5 Bredde
 
 # Power Armour mk3
 pamk3-pmak3-grid-size-h="Mk3's" Elektrisk Rustning MK3 Høyde
 pamk3-pmak3-grid-size-w="Mk3's" Elektrisk Rustning MK3 Bredde
+
 pamk3-pmak4-grid-size-h="Mk3's" Elektrisk Rustning MK4 Høyde
 pamk3-pmak4-grid-size-w="Mk3's" Elektrisk Rustning MK4 Bredde
 
 # Krastorio 2
 mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Høyde
 mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Bredde
+
 mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Høyde
 mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Bredde
 
 # Space Exploration
 se-thruster-suit-grid-size-h="SE's" Romdrakt 1 Høyde
 se-thruster-suit-grid-size-w="SE's" Romdrakt 1 Bredde
+
 se-thruster-suit-2-grid-size-h="SE's" Romdrakt 2 Høyde
 se-thruster-suit-2-grid-size-w="SE's" Romdrakt 2 Bredde
+
 se-thruster-suit-3-grid-size-h="SE's" Romdrakt 3 Høyde
 se-thruster-suit-3-grid-size-w="SE's" Romdrakt 3 Bredde
+
 se-thruster-suit-4-grid-size-h="SE's" Romdrakt 4 Høyde
 se-thruster-suit-4-grid-size-w="SE's" Romdrakt 4 Bredde
 
 # Power And Armour
+pa-mk3-grid-size-h="P&A's" Elektrisk Rustning MK3 Høyde
+pa-mk3-grid-size-w="P&A's" Elektrisk Rustning MK3 Bredde
+
+pa-mk4-grid-size-h="P&A's" Elektrisk Rustning MK4 Høyde
+pa-mk4-grid-size-w="P&A's" Elektrisk Rustning MK4 Bredde
 
 # Factorio Extended Equipment
+extended-armour-mk1-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde
+extended-armour-mk1-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde
+
+extended-armour-mk2-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde
+extended-armour-mk2-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde
+
+extended-armour-mk3-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde
+extended-armour-mk3-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde
 
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning MK3 Høyde
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning MK3 Bredde
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Høyde
-mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde
-mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Høyde
-mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde
-mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Høyde
-mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde
+custom-power-armor-mk3-grid-size-h="Custom's" Elektrisk Rustning MK3 Høyde
+custom-power-armor-mk3-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde
+
+custom-power-armor-mk4-grid-size-h="Custom's" Elektrisk Rustning MK4 Høyde
+custom-power-armor-mk4-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde
+
+custom-power-armor-mk5-grid-size-h="Custom's" Elektrisk Rustning MK5 Høyde
+custom-power-armor-mk5-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde
 
 [mod-setting-description]
 
@@ -91,21 +115,34 @@ mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks
 mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Space Exploration
-se-thruster-suit-grid-size-h="SE's" Rom Drakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-grid-size-w="SE's" Rom Drakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-grid-size-h="SE's" RomDrakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-grid-size-w="SE's" RomDrakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-se-thruster-suit-2grid-size-h="SE's" Rom Drakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-2grid-size-w="SE's" Rom Drakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-2grid-size-h="SE's" RomDrakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-2grid-size-w="SE's" RomDrakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
  
-se-thruster-suit-3-grid-size-h="SE's" Rom Drakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-3-grid-size-h="SE's" RomDrakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-3-grid-size-w="SE's" RomDrakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-4-grid-size-h="SE's" RomDrakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-4-grid-size-w="SE's" RomDrakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Power And Armour
+pa-mk3-grid-size-h="P&A's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+pa-mk3-grid-size-w="P&A's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:20\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+
+pa-mk4-grid-size-h="P&A's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+pa-mk4-grid-size-w="P&A's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:24\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Factorio Extended Equipment
+extended-armour-mk1-grid-size-h="FE's" Elektrisk Rustning MK1 Høyde\nMin:0\nMaks:50\nSpillets Noraml:12\nMod Default:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+extended-armour-mk1-grid-size-w="FE's" Elektrisk Rustning MK1 Bredde\nMin:0\nMaks:50\nSpillets Noraml:12\nMod Default:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+extended-armour-mk2-grid-size-h="FE's" Elektrisk Rustning MK2 Høyde\nMin:0\nMaks:60\nSpillets Noraml:15\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+extended-armour-mk2-grid-size-w="FE's" Elektrisk Rustning MK2 Bredde\nMin:0\nMaks:60\nSpillets Noraml:15\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+extended-armour-mk3-grid-size-h="FE's" Elektrisk Rustning MK3 Høyde\nMin:0\nMaks:70\nSpillets Noraml:18\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+extended-armour-mk3-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:70\nSpillets Noraml:18\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
