--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -148,7 +148,7 @@ extended-armour-mk3-grid-size-w="FE's" Elektrisk Rustning MK3 Bredde\nMin:0\nMak
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-# Custom Power Armour Fix/ (Custom Power Armour Reborn)# Disabled due to not loading have no idea way.
+# Custom Power Armour Fix/ (Custom Power Armour Reborn)
 custom-power-armor-mk3-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk3-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
