EN Quick Translation

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -3,6 +3,9 @@
 # Vanilla Armour's
 v-cas-light-armor-inv-size=Light Armour Inv_Size
 v-cas-heavy-armor-inv-size=Heavy Armour Inv_Size
+v-cas-modular-armor-inv-size=Modular
+v-cas-power-armor-inv-size=PO
+v-cas-power-armor-mk2-inv-size=P
 
 modular-armor-grid-size-h=Modular Armour Height
 modular-armor-grid-size-w=Modular Armour Width
@@ -14,6 +17,12 @@ power-armor-mk2-grid-size-h=Power Armour MK2 Height
 power-armor-mk2-grid-size-w=Power Armour MK2 Width
 
 # Bob's Armour's
+cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2 Inv_Size
+cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor 3 Inv_Size
+cas-bob-power-armor-mk3-inv-size=Bob's Power Armour 3 Inv_Size
+cas-bob-power-armor-mk4-inv-size=Bob's Power Armour 4 Inv_Size
+cas-bob-power-armor-mk5-inv-size=Bob's Power Armour 5 Inv_Size
+
 bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height
 bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width
 
@@ -24,6 +33,11 @@ bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height
 bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width
 
 # Power Armour mk3
+cas-pamk3-lvest-inv-size=MK3's Utility Light Vest Inv_Size
+cas-pamk3-hvest-inv-size=MK3's Utility Hevay Vest Inv_Size
+cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3 Inv_Size
+cas-pamk3-pamk4-inv-size=MK3's Power Armour MK4 Inv_Size
+
 pamk3-pmak3-grid-size-h="Mk3's" Power Armour MK3 Height
 pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 Width
 
@@ -31,6 +45,9 @@ pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 Height
 pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 Width
 
 # Krastorio 2
+cas-k2-power-armor-mk3-inv-size=K2 Power Armour Mk3 Inv_Size
+cas-k2-power-armor-mk4-inv-size=K2 Power Armour Mk4 Inv_Size
+
 mk3-armor-grid-size-h="K2's" Power Armour MK3 Height
 mk3-armor-grid-size-w="K2's" Power Armour MK3 Width
 
@@ -38,6 +55,11 @@ mk4-armor-grid-size-h="K2's" Power Armour MK4 Height
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width
 
 # Space Exploration
+cas-se-thruster-suit-inv-size=SE Space Suit 1 Inv_Size
+cas-se-thruster-suit-2-inv-size=SE Space Suit 2 Inv_Size
+cas-se-thruster-suit-3-inv-size=SE Space Suit 3 Inv_Size
+cas-se-thruster-suit-4-inv-size=SE Space Suit 4 Inv_Size
+
 se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height
 se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width
 
@@ -51,13 +73,20 @@ se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width
 
 # Power And Armour
-pa-mk3-grid-size-h="P&A's" Power Armours Mk3 Height
-pa-mk3-grid-size-w="P&A's" Power Armours Mk3 Width
+cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3 Inv_Size
+cas-PaA-power-armor-mk4-inv-size=P&A Power Armour MK4 Inv_Size
 
-pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height
-pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width
+pa-mk3-grid-size-h="P&A's" Power Armours MK3 Height
+pa-mk3-grid-size-w="P&A's" Power Armours MK3 Width
+
+pa-mk4-grid-size-h="P&A's" Power Armours MK4 Height
+pa-mk4-grid-size-w="P&A's" Power Armours MK4 Width
 
 # Factorio Extended Equipment
+cas-extended-power-armor-1-inv-size=FE Power Armour 1 Inv_Size
+cas-extended-power-armor-2-inv-size=FE Power Armour 2 Inv_Size
+cas-extended-power-armor-3-inv-size=FE Power Armour 3 Inv_Size
+
 extended-armour-mk1-grid-size-h="FE's" Power Armour MK3 Height
 extended-armour-mk1-grid-size-w="FE's" Power Armour MK3 Width
 
@@ -68,10 +97,16 @@ extended-armour-mk3-grid-size-h="FE's" Power Armour MK3 Height
 extended-armour-mk3-grid-size-w="FE's" Power Armour MK3 Width
 
 # Rampant Arsenal
+cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3 Inv_Size
+
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 Height
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 Width
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
+cas-custom-power-armor-mk3-inv-size=Custom Power Armour MK3 Inv_Size
+cas-custom-power-armor-mk4-inv-size=Custom Power Armour MK4 Inv_Size
+cas-custom-power-armor-mk5-inv-size=Custom Power Armour MK5 Inv_Size
+
 custom-power-armor-mk3-grid-size-h="Custom's" Power Armour MK3 Height
 custom-power-armor-mk3-grid-size-w="Custom's" Power Armour MK3 Width
 
