--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -3,9 +3,9 @@
 # Vanilla Armour's
 v-cas-light-armor-inv-size=Light Armour Inv_Size
 v-cas-heavy-armor-inv-size=Heavy Armour Inv_Size
-v-cas-modular-armor-inv-size=Modular
-v-cas-power-armor-inv-size=PO
-v-cas-power-armor-mk2-inv-size=P
+v-cas-modular-armor-inv-size=Modular Armour Inv_Size
+v-cas-power-armor-inv-size=Power Armour Mk1 Inv_Size
+v-cas-power-armor-mk2-inv-size=Power Armour Mk2 Inv_Size
 
 modular-armor-grid-size-h=Modular Armour Height
 modular-armor-grid-size-w=Modular Armour Width
@@ -33,8 +33,8 @@ bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height
 bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width
 
 # Power Armour mk3
-cas-pamk3-lvest-inv-size=MK3's Utility Light Vest Inv_Size
-cas-pamk3-hvest-inv-size=MK3's Utility Hevay Vest Inv_Size
+cas-pamk3-lvest-inv-size=MK3's Light Utility Vest Inv_Size
+cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest Inv_Size
 cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3 Inv_Size
 cas-pamk3-pamk4-inv-size=MK3's Power Armour MK4 Inv_Size
 
@@ -178,14 +178,14 @@ pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height\nMin:0\nMax:50\nBase Default
 pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width\nMin:0\nMax:50\nBase Default:24\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Factorio Extended Equipment
-extended-armour-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armour-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-extended-armour-mk2-grid-size-h="FE's" Power Armour MK2 Height\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armour-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk2-grid-size-h="FE's" Power Armour MK2 Height\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBase Default:15\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-extended-armour-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armour-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
