Extended NO locales & added RU locales.

--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -17,11 +17,11 @@ power-armor-mk2-grid-size-h=Power Armour MK2 Height
 power-armor-mk2-grid-size-w=Power Armour MK2 Width
 
 # Bob's Armour's
-cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor 2 Inv Size
-cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor 3 Inv Size
-cas-bob-power-armor-mk3-inv-size=Bob's Power Armour 3 Inv Size
-cas-bob-power-armor-mk4-inv-size=Bob's Power Armour 4 Inv Size
-cas-bob-power-armor-mk5-inv-size=Bob's Power Armour 5 Inv Size
+cas-bob-heavy-armor-2-inv-size=Bob's Heavy Armor Mk2 Inv Size
+cas-bob-heavy-armor-3-inv-size=Bob's Heavy Armor MK3 Inv Size
+cas-bob-power-armor-mk3-inv-size=Bob's Power Armour MK3 Inv Size
+cas-bob-power-armor-mk4-inv-size=Bob's Power Armour MK4 Inv Size
+cas-bob-power-armor-mk5-inv-size=Bob's Power Armour MK5 Inv Size
 
 bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height
 bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width
@@ -87,11 +87,11 @@ cas-extended-power-armor-1-inv-size=FE Power Armour 1 Inv Size
 cas-extended-power-armor-2-inv-size=FE Power Armour 2 Inv Size
 cas-extended-power-armor-3-inv-size=FE Power Armour 3 Inv Size
 
-extended-armor-mk1-grid-size-h="FE's" Power Armour MK3 Height
-extended-armor-mk1-grid-size-w="FE's" Power Armour MK3 Width
+extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height
+extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width
 
-extended-armor-mk2-grid-size-h="FE's" Power Armour MK3 Height
-extended-armor-mk2-grid-size-w="FE's" Power Armour MK3 Width
+extended-armor-mk2-grid-size-h="FE's" Power Armour MK2 Height
+extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width
 
 extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height
 extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width
